--------------------------------------------------------------------
Data Crow version 5.0.1                       Released on 2025-06-18
--------------------------------------------------------------------

[Changed]
- Web; added field selection for the search
- Quick search now correctly searches on boolean values as well
- JasperReports has been upgraded to version 7.0.3. Data Crow now compiles the reports on startup (if needed).
- Major library upgrades: Apache Tika from 2.9 to version 3.2 / PDF Box from 2.0 to 3.0.5
- Reporting: Data Crow now compiles the report templates from JasperReports on startup, if the template was changed. The functionality to deploy your own reports is still there and still the same. The main difference is that Data Crow no longer has deliver compiled reports. Data Crow tracks whether a (re)compile of the report is required.

[Fixed]
- Reports not working.
- Issues where some fields were numeric in the database but were expected to be of type varchar.
- MobyGames online search was broken; uplifted the code to support v2 of their (now paid for...) API.


--------------------------------------------------------------------
Data Crow version 5.0                         Released on 2025-04-29
--------------------------------------------------------------------

[New]
- Picture management has been completed changed; Data Crow now allows for unlimited number of pictures to be added.
- A completely new web version has been created. Start the server using the startup parameters and navigate to: http://<web server IP address>:<web server port>

[Changed]
- Add from memory for pictures now also allowed URLs to be pasted.
- Removed the memory usage message from the log; only shown now using the -debug option.
- Edit as New; external references will no longer be copied as well as online service update information (as it is incorrect source documentation).