@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.datacrow</groupId>
 		<artifactId>datacrow-main</artifactId>
-		<version>5.0.1</version>
+		<version>5.0.2</version>
 	</parent>
 
 	<artifactId>datacrow-services</artifactId>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>org.datacrow</groupId>
 			<artifactId>datacrow-core</artifactId>
-			<version>5.0.1</version>
+			<version>5.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
