@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.datacrow</groupId>
         <artifactId>datacrow-main</artifactId>
-        <version>5.0.1</version>
+        <version>5.0.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
