@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.datacrow</groupId>
 	<artifactId>datacrow-main</artifactId>
-	<version>5.0.1</version>
+	<version>5.0.2</version>
 	<packaging>pom</packaging>
 	<organization>
 		<name>Van der Waals BV</name>
