@@ -1,4 +1,12 @@
 --------------------------------------------------------------------
+Data Crow version 5.0.2                       Released on 2025-06-xx
+--------------------------------------------------------------------
+
+[Fixed]
+- Upgrade issue; image conversion is failing.
+
+
+--------------------------------------------------------------------
 Data Crow version 5.0.1                       Released on 2025-06-18
 --------------------------------------------------------------------
 
